modification github html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h2> INTRODUCTION </h2>
 <p> Bienvenue dans cette introduction aux formats HTML et CSS. Cette quête te permettra de créer ta toute première page web. Elle sera évidemment très basique. Le but est simplement d'en comprendre le fonctionnement. </p> 
 <h2> MODIFICATION LOCALE </h2>
+<h2> MODIFICATION GITHUB </h2>
 <a href= "http://www.wildcodeschool.com"> WCS ==>  </a>
 </body> 
 </html>
